API development & Dockerization completed.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 pandas>=1.3.5
-numpy>=1.21.6
 scikit-learn>=1.0.2
 matplotlib>=3.5.3
 seaborn>=0.11.2
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pillow>=9.0.0
+numpy>=1.22.0
+uvicorn[standard]
+joblib
+jinja2
+python-multipart
